<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/expenses_and_payments"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/header_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/entries_summary_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/dialog_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:id="@+id/expenses_summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses_label"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toStartOf="@id/payments_summary_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/payments_summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payments_label"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toStartOf="@id/balance_summary_label"
                app:layout_constraintStart_toEndOf="@+id/expenses_summary_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance_summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_label"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/payments_summary_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenses_summary_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                tools:text="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/expenses_summary_label"
                app:layout_constraintStart_toStartOf="@+id/expenses_summary_label" />

            <TextView
                android:id="@+id/payments_summary_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:text="5"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/payments_summary_label"
                app:layout_constraintStart_toStartOf="@+id/payments_summary_label" />

            <TextView
                android:id="@+id/balance_summary_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:text="50.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/balance_summary_label"
                app:layout_constraintStart_toStartOf="@+id/balance_summary_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entries_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entries_summary_container"
            tools:listitem="@layout/inbox_item" />

        <ImageView
            android:id="@+id/add_entry_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/empty_list_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="150dp"
                android:src="@drawable/ic_empty_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/empty_list_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/empty_entries_list_error"
                android:textColor="@color/placeholder_text_color"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_list_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/progress_bar_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/progress_bar_background_overlay"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:indeterminateDrawable="@drawable/circular_progress_bar"
                android:visibility="visible" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>